use path instead of file, use path instead of uri, reuse opened ZipFile in xincluder resolver
GitOrigin-RevId: 45e2688a73a07cfa1e5501a49e3886442bcb3dd9